change png for webp

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <img src="img/main.webp" class="first__img first__img-desctop" alt="">
-            <img src="img/main-mobile.png" class="first__img first__img-mobile" alt="">
+            <img src="img/main-mobile.webp" class="first__img first__img-mobile" alt="">
             <div class="first__link first__link-mobile link _anim-items _anim-no-hide">
                 <a href="" class="link__link">
                     Заказать
@@ -166,7 +166,7 @@
                             <div class="swiper-button-next"></div>
                         </div>
                     </div>
-                    <div class="company__bg"><img class="company__bg-img" src="img/company-bg.png" alt=""></div>
+                    <div class="company__bg"><img class="company__bg-img" src="img/company-bg.webp" alt=""></div>
                 </div>
             </div>
         </section>
@@ -184,12 +184,12 @@
                         </div>
                     </div>
                     <div class="digital__link-mobile">
-                        <a href="" class="digital__link--link-mobile"><img src="img/sale.png" alt=""></a>
+                        <a href="" class="digital__link--link-mobile"><img src="img/sale.webp" alt=""></a>
                     </div>
                 </div>
             </div>
             <img src="img/colors.webp" alt="" class="digital__img digital__img-desctop">
-            <img src="img/colors-mobile.png" alt="" class="digital__img digital__img-mobile">
+            <img src="img/colors-mobile.webp" alt="" class="digital__img digital__img-mobile">
         </section>
         <section class="trust">
             <!-- <img src="img/trust.webp" alt="" class="trust__img-1">
@@ -199,8 +199,8 @@
                 <div class="trust__subtitle">Мы работали с клиентами из Азии, Европы<br> странами СНГ, Америки и Африки
                 </div>
             </div>
-            <img src="img/leadtrust.png" alt="" class="trust__img-leadust">
-            <img src="img/design.png" alt="" class="trust__img-1">
+            <img src="img/leadtrust.webp" alt="" class="trust__img-leadust">
+            <img src="img/design.webp" alt="" class="trust__img-1">
             <img src="img/map.webp" alt="" class="trust__img-map">
             <section class="steps">
                 <div class="steps__container">
