add link in telegram

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h1 class="first__title _anim-items _anim-no-hide">Дизайн,<br> кодинг</h1>
                             <div class="first__subtitle _anim-items _anim-no-hide">Трафик</div>
                             <div class="first__link first__link-decktop link _anim-items _anim-no-hide">
-                                <a href="" class="link__link">
+                                <a href="https://t.me/LT_Dev_Bot" class="link__link">
                                     Заказать
                                 </a>
                                 <div class="link__play">
@@ -60,7 +60,7 @@
             <img src="img/main.webp" class="first__img first__img-desctop" alt="">
             <img src="img/main-mobile.webp" class="first__img first__img-mobile" alt="">
             <div class="first__link first__link-mobile link _anim-items _anim-no-hide">
-                <a href="" class="link__link">
+                <a href="https://t.me/LT_Dev_Bot" class="link__link">
                     Заказать
                 </a>
             </div>
@@ -180,11 +180,12 @@
                         можно сделать все за раз, в одном месте по выгодной цене?</div>
                     <div class="digital__link digital__link-desctop">
                         <div class="digital__link-box ">
-                            <a href="" class="digital__link-link"> ПОЛУЧИТЬ<br> СКИДКУ!</a>
+                            <a href="https://t.me/LT_Dev_Bot" class="digital__link-link"> ПОЛУЧИТЬ<br> СКИДКУ!</a>
                         </div>
                     </div>
                     <div class="digital__link-mobile">
-                        <a href="" class="digital__link--link-mobile"><img src="img/sale.webp" alt=""></a>
+                        <a href="https://t.me/LT_Dev_Bot" class="digital__link--link-mobile"><img src="img/sale.webp"
+                                alt=""></a>
                     </div>
                 </div>
             </div>
@@ -213,7 +214,7 @@
                                     <img src="img/step1.webp" alt="Картинка робот" class="steps__img">
                                 </div>
                                 <div class="steps__description">Напишите нашему telegram боту</div>
-                                <a href="" class="steps__link">Заказать!</a>
+                                <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                             </div>
                         </div>
                         <div class="steps__item _anim-items _anim-no-hide steps__item-2">
@@ -223,7 +224,7 @@
                                     <img src="img/step2.webp" alt="Картинка человек" class="steps__img steps__img-2">
                                 </div>
                                 <div class="steps__description">Опишите своё ТЗ менеджеру</div>
-                                <a href="" class="steps__link">Заказать!</a>
+                                <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                             </div>
                         </div>
                         <div class="steps__item _anim-items _anim-no-hide steps__item-3">
@@ -233,7 +234,7 @@
                                     <img src="img/step3.webp" alt="Картинка рука" class="steps__img steps__img-3">
                                 </div>
                                 <div class="steps__description">Утвердите цену, ваш ТЗ</div>
-                                <a href="" class="steps__link">Заказать!</a>
+                                <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                             </div>
                         </div>
                         <div class="steps__item _anim-items _anim-no-hide steps__item-4">
@@ -244,7 +245,7 @@
                                         class="steps__img steps__img-4">
                                 </div>
                                 <div class="steps__description">Внесите правки. Финальный аккорд!</div>
-                                <a href="" class="steps__link">Заказать!</a>
+                                <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                             </div>
                         </div>
                         <div class="steps__item _anim-items _anim-no-hide steps__item-5">
@@ -254,7 +255,7 @@
                                     <img src="img/step5.webp" alt="Картинка смайлик" class="steps__img steps__img-5">
                                 </div>
                                 <div class="steps__description">Получите MAXимальный ROI с нашим продуктом!</div>
-                                <a href="" class="steps__link">Заказать!</a>
+                                <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                             </div>
                         </div>
                     </div>
@@ -268,7 +269,7 @@
                                             <img src="img/step1.webp" alt="Картинка робот" class="steps__img">
                                         </div>
                                         <div class="steps__description">Напишите нашему telegram боту</div>
-                                        <a href="" class="steps__link">Заказать!</a>
+                                        <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                                     </div>
                                 </div>
                             </div>
@@ -281,7 +282,7 @@
                                                 class="steps__img steps__img-2">
                                         </div>
                                         <div class="steps__description">Опишите своё ТЗ менеджеру</div>
-                                        <a href="" class="steps__link">Заказать!</a>
+                                        <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                                     </div>
                                 </div>
                             </div>
@@ -294,7 +295,7 @@
                                                 class="steps__img steps__img-3">
                                         </div>
                                         <div class="steps__description">Утвердите цену, ваш ТЗ</div>
-                                        <a href="" class="steps__link">Заказать!</a>
+                                        <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                                     </div>
                                 </div>
                             </div>
@@ -307,7 +308,7 @@
                                                 class="steps__img steps__img-4">
                                         </div>
                                         <div class="steps__description">Внесите правки. Финальный аккорд!</div>
-                                        <a href="" class="steps__link">Заказать!</a>
+                                        <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                                     </div>
                                 </div>
                             </div>
@@ -321,7 +322,7 @@
                                         </div>
                                         <div class="steps__description">Получите MAXимальный ROI с нашим продуктом!
                                         </div>
-                                        <a href="" class="steps__link">Заказать!</a>
+                                        <a href="https://t.me/LT_Dev_Bot" class="steps__link">Заказать!</a>
                                     </div>
                                 </div>
                             </div>
